# OleBow

./: .gitignore  CMakeLists.txt  MArrayDesc.hpp  MCoClass.hpp  MCoClassInterface.hpp  MComPtr.hpp  MDispInterface.cpp  MDispProperty.hpp  MEnum.hpp  MEnumValue.hpp  MIDispatchMethods.hpp  MInheritedInterfaces.hpp  MInterface.cpp  MInterface.hpp  MMethod.hpp  MModuleConst.hpp  MModuleConstants.hpp  MModuleFunctions.hpp  MNode.cpp  MNode.hpp  MParamDesc.hpp  MTypeDef.hpp  MTypeInfoExtra.cpp  MTypeInfoExtra.hpp  MTypeLib.cpp  MWriter.hpp  OleBow.cpp  README.md  build.bat  rebuild.sh  test.sh
src/: CMakeLists.txt  MCoClass.hpp  MCoClassInterface.hpp  MCustData.hpp  MDispInterface.cpp  MDispInterface.hpp  MDispInterfaceInheritedInterfaces.hpp  MDispProperty.hpp  MElemDesc.hpp  MEnum.hpp  MEnumValue.hpp  MFileWriter.hpp  MFuncDesc.hpp  MIDispatchMethods.hpp  MIDispatchProperties.hpp  MInheritedInterfaces.hpp  MInterface.hpp  MMethod.cpp  MMethod.hpp  MModule.cpp  MModule.hpp  MModuleConst.hpp  MModuleConstants.hpp  MModuleFunctions.hpp  MNode.cpp  MNode.hpp  MRecord.hpp  MRecordMember.hpp  MSmartWriter.hpp  MTypeAttr.hpp  MTypeDef.hpp  MTypeDesc.cpp  MTypeDesc.hpp  MTypeInfoExtra.cpp  MTypeInfoExtra.hpp  MTypeLib.cpp  MTypeLib.hpp  MTypeLibAttr.hpp  MTypeLibMetadata.hpp  MUnion.hpp  (+6 more)
